<resources>
    <string name="app_name">Pynpoint</string>
    <string name="start_button">Start</string>
    <string name="description">George Lucas said, \"Always remember, your focus determines your reality.\"\n\nToday is your first step towards
    pynpointing that reality.</string>
    <string name="description_button">Let\'s get started</string>
    <string name="study_pattern_prompt">Select a study pattern</string>
    <string name="study_pattern_title">Study Pattern</string>
    <string name="hour_label">Hour(s):</string>
    <string name="minutes_label">Minute(s):</string>
    <string name="timer_title">Length</string>
    <string name="break_title">Break</string>
    <string name="interval_title">Interval</string>
    <string name="to_timer_button_label">Timer</string>
    <string name="to_settings_button_label">Settings</string>
    <string name="to_history_button_label">History</string>
    <string name="to_profile_button_label">Profile</string>
    <string name="to_shop_button_label">Shop</string>
    <string name="timer_hour_prompt">Select timer length (hours)</string>
    <string name="timer_minute_prompt">Select timer length (minutes)</string>
    <string name="break_hour_prompt">Select break length (hours)</string>
    <string name="break_minute_prompt">Select break length (minutes)</string>
    <string name="interval_hour_prompt">Select interval length (hours)</string>
    <string name="interval_minute_prompt">Select interval length (minutes)</string>
    <string name="settings_actionbar_label">Settings</string>
    <string name="history_date_label"><b>Date</b></string>
    <string name="history_length_label"><b>Length</b></string>
    <string name="history_percentage_label"><b>% Complete</b></string>
    <string name="history_points_label"><b>Points</b></string>
    <string name="history_title">History</string>
    <string name="default_date">Jan XX XXXX</string>
    <string name="default_length">X h X m</string>
    <string name="default_percent_complete">X</string>
    <string name="default_points">X</string>
    <string name="profile_pic_descriptor">Profile Picture</string>
    <string name="default_profile_name">Username</string>
    <string name="points_title_profile">Points: </string>
    <string name="default_points_value">0</string>
    <string name="profile_title">Profile</string>
    <string name="shop_button_text">Shop</string>
    <string name="reference_button">ReferenceKey</string>
    <string name="tips_button">TipsKey</string>
    <string name="about_button">AboutKey</string>
    <string name="about_title">About</string>
    <string name="reference_title">References</string>
    <string name="timer_set_title">Timer Set</string>
    <string name="shop_title">Shop</string>
    <string name="about">Ryan and James created this app for their Senior Design project in Fall 2017. Their goal
    was to try and create an app that incentivizes users to block out social media and communication so they can increase
    their focus and pynpoint their future.</string>
    <string name="reference_1_text">[1] Cengage. (2016, April 28). Tips for Students: How to Study with 5,3 or 1 Day until the Exam.
        Retrieved March 20, 2017, from https://blog.cengage.com/tips-for-students-how-to-study-with-5-3-or-1-day-until-the-exam/</string>
    <string name="reference_2_text">[2] Google. (2014, December). Meet Android Studio. Retrieved March 20, 2017, from https://developer.android.com/studio/intro/index.html</string>
    <string name="reference_3_text">[3] OnlineSchools. (2017, February 20). The Science of Taking a Break. Retrieved March 20, 2017, from http://www.onlineschools.org/science-of-study-breaks/</string>
    <string name="reference_4_text">[4] Oracle. (2014, March 18). Java Platform SE 8. Retrieved March 20, 2017, from
http://docs.oracle.com/javase/8/docs/api/index.html</string>
    <string name="reference_5_text">[5] WashingtonPost. (2013, August 27). Study Techniques that work-and surprisingly don\'t. Retrieved March 20, 2017, from https://www.washingtonpost.com/news/answer-sheet/wp/2013/08/27/study-techniques-that-work-and-surprisingly-dont/?utm_term=.dc749a781f4b</string>
    <string name="stats_title_textview">Stats</string>
    <string name="overall_percentage_complete_textview">Overall % Complete:</string>
    <string name="overall_percentage_complete_textview_value">0%</string>
    <string name="overall_time_studied_textview">Overall Time Studied:</string>
    <string name="overall_time_studied_textview_value">0 h 0 m</string>
    <string name="num_of_study_sessions_textview"># of Study Sessions:</string>
    <string name="num_of_study_sessions_textview_value">0</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="results_title">Results</string>
    <string name="time_studied_label">Time Studied:</string>
    <string name="time_studied_default">0 h 0 m</string>
    <string name="break_time_label">Break Time:</string>
    <string name="break_time_default">0 h 0 m</string>
    <string name="total_time_label">Total Time:</string>
    <string name="total_time_default">0 h 0 m</string>
    <string name="point_breakdown_label"><u>Point Breakdown</u></string>
    <string name="points_current_label">Current Points:</string>
    <string name="points_current_default">0</string>
    <string name="points_earned_label">Points Earned:</string>
    <string name="points_earned_default">0</string>
    <string name="points_total_label">Total:</string>
    <string name="points_total_default">0</string>
    <string name="next_tip_button">Next Tip</string>
    <string name="tips_title">Tips</string>
    <string name="tip1">Choose the type of study pattern you want. The default values will show in the boxes below.</string>
    <string name="tip2">Choose how long you want your overall study session to be.</string>
    <string name="tip3">Choose how long your breaks are.</string>
    <string name="tip4">Choose how long your study intervals are.</string>
    <string name="tip5">Press start and begin focusing!</string>
    <string name="total_time_left_title_textview"><u>Total Time Left:</u></string>
    <string name="current_task_title_textview"><u>Current Task:</u></string>
    <string name="interval_time_title_textview"><u>Interval Time:</u></string>
    <string name="default_timer_start_value">Hours:99 Minutes:59 Seconds:59</string>
    <string name="default_total_time_left">Hours:99 Minutes:59</string>
    <string name="timer_start_title_textview">Timer</string>


    <string-array name="study_pattern_list">
        <item>Standard</item>
        <item>Rapidfire</item>
        <item>Optimized</item>
        <item>Custom</item>
    </string-array>
</resources>
