<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.pynpoint.ReferenceActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/reference_title"
        android:textColor="?attr/secondaryTextColor"
        android:textSize="40sp"/>


    <TextView
        android:id="@+id/reference_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginStart="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/reference_1_text"
        android:layout_gravity="start"
        android:textColor="?attr/secondaryTextColor"
        android:textSize="@dimen/small_medium_text_size"
        android:layout_alignParentTop="true"/>

    <TextView
        android:id="@+id/reference_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/reference_2_text"
        android:layout_gravity="start"
        android:textColor="?attr/secondaryTextColor"
        android:textSize="@dimen/small_medium_text_size"
        android:layout_below="@id/reference_1"/>

    <TextView
        android:id="@+id/reference_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/reference_3_text"
        android:layout_gravity="start"
        android:textColor="?attr/secondaryTextColor"
        android:textSize="@dimen/small_medium_text_size"
        android:layout_below="@id/reference_2"/>

    <TextView
        android:id="@+id/reference_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/reference_4_text"
        android:layout_gravity="start"
        android:textColor="?attr/secondaryTextColor"
        android:textSize="@dimen/small_medium_text_size"
        android:layout_below="@id/reference_3"/>

    <TextView
        android:id="@+id/reference_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/reference_5_text"
        android:layout_gravity="start"
        android:textColor="?attr/secondaryTextColor"
        android:textSize="@dimen/small_medium_text_size"
        android:layout_below="@id/reference_4"/>

    <Button
        android:id="@+id/to_timer_button_reference"
        android:layout_width="76dp"
        android:layout_height="wrap_content"
        android:text="@string/to_timer_button_label"
        android:textSize="@dimen/tiny_text_size"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/to_settings_button_reference"
        android:text="@string/to_settings_button_label"
        android:textSize="@dimen/tiny_text_size"
        android:layout_alignTop="@+id/to_timer_button_reference"
        android:layout_toEndOf="@+id/to_timer_button_reference"
        android:layout_width="76dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"/>

    <Button
        android:id="@+id/to_history_button_reference"
        android:text="@string/to_history_button_label"
        android:textSize="@dimen/tiny_text_size"
        android:layout_alignTop="@+id/to_timer_button_reference"
        android:layout_width="76dp"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/to_profile_button_reference"
        android:layout_marginEnd="10dp"/>
    <Button
        android:id="@+id/to_profile_button_reference"
        android:text="@string/to_profile_button_label"
        android:textSize="@dimen/tiny_text_size"
        android:layout_alignTop="@+id/to_timer_button_reference"
        android:layout_width="76dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"/>

</RelativeLayout>
