<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.pynpoint.AboutActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/about_title"
        android:textColor="?attr/secondaryTextColor"
        android:textSize="40sp"/>

    <TextView
        android:id="@+id/about_paragraph_text_view"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="sans-serif"
        android:text="@string/about"
        android:textAlignment="center"
        android:textColor="?attr/secondaryTextColor"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/to_timer_button_about"
        android:layout_width="76dp"
        android:layout_height="wrap_content"
        android:text="@string/to_timer_button_label"
        android:textSize="@dimen/tiny_text_size"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/to_settings_button_about"
        android:text="@string/to_settings_button_label"
        android:textSize="@dimen/tiny_text_size"
        android:layout_alignTop="@+id/to_timer_button_about"
        android:layout_toEndOf="@+id/to_timer_button_about"
        android:layout_width="76dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"/>

    <Button
        android:id="@+id/to_history_button_about"
        android:text="@string/to_history_button_label"
        android:textSize="@dimen/tiny_text_size"
        android:layout_alignTop="@+id/to_timer_button_about"
        android:layout_width="76dp"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/to_profile_button_about"
        android:layout_marginEnd="10dp"/>

    <Button
        android:id="@+id/to_profile_button_about"
        android:text="@string/to_profile_button_label"
        android:textSize="@dimen/tiny_text_size"
        android:layout_alignTop="@+id/to_timer_button_about"
        android:layout_width="76dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"/>

</RelativeLayout>
