<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/twitchPurple"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/antiFlashWhite"
        android:textSize="40sp"
        android:text="@string/settings_actionbar_label"
        android:layout_centerHorizontal="true"
        />

    <ListView android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <Button
        android:id="@+id/to_timer_button_settings"
        android:layout_width="76dp"
        android:layout_height="wrap_content"
        android:text="@string/to_timer_button_label"
        android:textSize="@dimen/tiny_text_size"
        android:textColor="@color/black"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/to_settings_button_settings"
        android:text="@string/to_settings_button_label"
        android:textSize="@dimen/tiny_text_size"
        android:textColor="@color/black"
        android:layout_alignTop="@+id/to_timer_button_settings"
        android:layout_toEndOf="@+id/to_timer_button_settings"
        android:layout_toRightOf="@+id/to_timer_button_settings"
        android:layout_width="76dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"/>

    <Button
        android:id="@+id/to_history_button_settings"
        android:text="@string/to_history_button_label"
        android:textSize="@dimen/tiny_text_size"
        android:textColor="@color/black"
        android:layout_alignTop="@+id/to_timer_button_settings"
        android:layout_width="76dp"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/to_profile_button_settings"
        android:layout_toStartOf="@id/to_profile_button_settings"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"/>

    <Button
        android:id="@+id/to_profile_button_settings"
        android:text="@string/to_profile_button_label"
        android:textSize="@dimen/tiny_text_size"
        android:textColor="@color/black"
        android:layout_alignTop="@+id/to_timer_button_settings"
        android:layout_width="76dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"/>

</RelativeLayout>