<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory>
        <Preference/>
        <CheckBoxPreference
            android:title="Quit button enabled"
            android:key="enablequitbutton"
            android:summaryOff="Disabled"
            android:summaryOn="Enabled"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:title="Tutorial on Start"
            android:key="enabletutorial"
            android:summaryOff="Disabled"
            android:summaryOn="Enabled"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:title="Hide Timer"
            android:key="disabletimer"
            android:summaryOff="Disabled"
            android:summaryOn="Enabled"
            android:defaultValue="false" />
<!--
        <CheckBoxPreference
            android:title="Games Enabled"
            android:key="enable_games"
            android:summaryOff="Disabled"
            android:summaryOn="Enabled"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:title="Show Streaks"
            android:key="enable_streaks"
            android:summaryOff="Disabled"
            android:summaryOn="Enabled"
            android:defaultValue="false" />
-->
        <Preference android:title="References"
            android:key="@string/reference_button" />
        <Preference android:title="Tips"
            android:key="@string/tips_button" />
        <Preference android:title="About"
            android:key="@string/about_button" />
    </PreferenceCategory>

</PreferenceScreen>